--- a/lab-00.Rmd
+++ b/lab-00.Rmd
@@ -17,15 +17,15 @@ We set up the data frame. Edit the data below to include information about your 
 
 ```{r setup-tibble}
 team_data <- tibble(
-  name = c("Peter Rabbit", "member 1", "member 2", 
-           "member 3", "member 4"),
-  github_username = c("mcgregors-garden", "username 1", "username 2", 
-                      "username 3", "username 4"), 
-  colour = c("powderblue", "colour 1", "colour 2", 
-             "colour 3", "colour 4"),
-  hobby = c("Hopping", "hobby 1", "hobby 2", 
-            "hobby 3", "hobby 4"),
-  favourite_number = c(2, NA, NA, NA, NA)
+  name = c("Romi", "Barney", "Duncan", 
+           "Karan", "Matteo"),
+  github_username = c("romikaushik", "bmccreery", "DJones2334", 
+                      "Karan-s06", "MatteoSmirney"), 
+  colour = c("Green", "Green", "Green", 
+             "Purple", "Blue"),
+  hobby = c("Swimming", "Motorsport", "MMA", 
+            "Badminton", "Formula 1"),
+  favourite_number = c(9, 4, 1, 3, 9)
   )
 
 team_data
@@ -47,19 +47,19 @@ p1
 ```
 
 
-*Remove this text (including the stars), and add your answer for Exercise 18 here.*
+It shows everyone's favourite number on a graph and how big the numbers are relative to one another.
 
 ### Exercises 19
 
 Change the text of the plot title and axis labels.
 
 ```{r labelled-bar-plot}
-p1 + labs(x = "Insert text here", 
-          y = "Insert text here",
-          title = "Insert text here")
+p1 + labs(x = "Github Username", 
+          y = "Favourite Number",
+          title = "Favourite Number against Github Username")
 ```
 
-*Remove this text (including the stars), and add your answer for Exercise 19 here.*
+#Labs allows a change in axis labels
 
 ### Exercise 20
 
@@ -69,4 +69,4 @@ p2 <- ggplot(team_data, aes(x = hobby)) +
 p2
 ```
 
-*Remove this text (including the stars) and add your answer for Exercise 20 here.*
+Allow people to chose from specific options so different spellings or names of the same activity don't get counted and dispayed separately from one another.
